--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ALFBOT",
+  "name": "ALFBO",
   "version": "1.0.0",
   "description": "bot termux",
   "main": "index.js",
@@ -34,7 +34,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/alfiansx/alfbot"
+    "url": "git+https://github.com/squishy-programmer/betterbot"
   },
   "keywords": [
     "k"
@@ -42,7 +42,7 @@
   "author": "Abdul Muttaqin",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/alfiansx/alfbot/issues"
+    "url": "https://github.com/squishy-programmer/betterbot/issues"
   },
-  "homepage": "https://github.com/alfiansx/alfbot#readme"
+  "homepage": "https://github.com/squishy-programmer/betterbot"
 }
